# raspberry-py

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
docs/: _config.yml  brushed-dc-motor.md  cad-parts.md  elevator.md  index.md  itg-mania.md  mount-google-drive.md  octoprint.md  raspberry-pi-operating-system.md  remote-gpio.md  robotic-arm.md  rpi-rest.conf  rpy-rest.conf  smart-car.md  ubuntu-operating-system.md
docs/_includes/: youtubePlayer.html
docs/assets/css/: style.scss
docs/raspberry-py/: python-gpio.md  remote-gpio.md  robotic-arm.md  rpy-rest.conf  smart-car.md
docs/raspberry_py/: python-gpio.md  remote-gpio.md  rpy-rest.conf  smart-car.md
docs/rpi/: python-gpio.md  remote-gpio.md  rpi-rest.conf  smart-car.md
gh-pages/: index.md  python-gpio.md  remote-gpio.md  robotic-arm.md  smart-car.md
manuals/: coildata.xls
src/raspberry_py/: utils.py
src/raspberry_py/gpio/: __init__.py  adc.py  communication.py  controls.py  displays.py  integrated_circuits.py  lights.py  motors.py  power.py  robotics.py  sensors.py  sounds.py
src/raspberry_py/gpio/examples/: adc.py  adc_multicolored_led.py  alarming_led_bar_with_button.py  attitude.py  blinking_led.py  blinking_led_with_button.py  blinking_led_with_clock.py  breathing_led.py  buzzer_with_button.py  buzzing_led_bar_with_button.py  dc_motor_with_button_relay.py  dc_motor_with_gpio_relay.py  dc_motor_with_potentiometer.py  freenove_smart_car.py  hardware_pulse_wave_modulation.py  hw_pwm_direct_drive.py  hw_pwm_indirect_drive.py  hygrothermograph.py  hygrothermograph_with_lcd.py  infrared_motion_sensor.py  joystick.py  lcd.py  led_bar.py  led_bar_with_button.py  led_matrix.py  led_strip.py  led_strip_adafruit_rpi4.py  led_strip_adafruit_rpi5.py  limit_switch.py  matrix_keypad.py  multicolored_led.py  photoresistor.py  raspberry_py_elevator.py  rotary_encoder.py  rotary_encoder_arduino.py  rotary_encoder_dual_multiprocess.py  rotary_encoder_multiprocess.py  rotary_encoder_multiprocess_two_signal_accuracy_test.py  rotary_encoder_multiprocess_two_signal_two_edge.py  rotary_encoder_one_signal_one_edge.py  (+13 more)
src/raspberry_py/gpio/freenove/: smart_car.py
src/raspberry_py/rest/: application.py  styles.css  utils.js
src/rpi/: blink.py
src/rpi/gpio/: __init__.py  adc.py  controls.py  displays.py  ic_chips.py  integrated_circuits.py  lights.py  motors.py  sensors.py  sounds.py  switches.py
src/rpi/gpio/adc/: components.py
src/rpi/gpio/examples/: adc.py  adc_multicolored_led.py  alarming_led_bar_with_button.py  attitude.py  blinking_led.py  blinking_led_with_button.py  blinking_led_with_clock.py  breathing_led.py  buzzer_with_button.py  buzzing_led_bar_with_button.py  dc_motor.py  dc_motor_with_button_relay.py  dc_motor_with_potentiometer.py  freenove_smart_car.py  hardware_pulse_wave_modulation.py  hygrothermograph.py  hygrothermograph_with_lcd.py  infrared_motion_sensor.py  joystick.py  lcd.py  led_bar.py  led_bar_with_button.py  led_matrix.py  matrix_keypad.py  multicolored_led.py  photoresistor.py  servo_sweep.py  shift_register_4_digit_7_segment_led.py  shift_register_7_segment_led.py  shift_register_led.py  stepper_motor.py  thermistor.py  (+3 more)
src/rpi/rest/: app.py  application.py  styles.css
(+172 files in other folders)
