[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'raspberry-py'
version = "0.7.0a0"
description = 'A Python/REST interface for GPIO circuits running on the Raspberry Pi'
readme = 'README.md'
authors = [
    'Matthew Gerber <gerber.matthew@gmail.com>'
]
packages = [
    { include = 'raspberry_py', from = 'src'}
]
repository = 'https://github.com/MatthewGerber/raspberry-py'

[tool.poetry.dependencies]
python = '>=3.10,<3.13'
numpy = '~=1.26'
smbus2 = '~=0.4'
Flask = '~=3.0'
Flask-Cors = '~=4.0'
opencv-python = '~=4.8'
rpi-ws281x = '~=5.0'
pyserial = "^3.5"

# raspberry pi os removed sysfs gpio interface with rpi 5. prior to this, it was possible to use the RPi.GPIO package.
# the rpi-lgpio package might work with the older pi os, but it's untested.
rpi-lgpio = "^0.6"

[tool.poetry.group.dev.dependencies]
mypy = '~=1.10'
flake8 = '~=7.0'

[tool.poetry.scripts]
write_component_files = 'raspberry_py.rest.application:write_component_files_cli'
