[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'raspberry-py'
version = "0.8.0a0"
description = 'A Python/REST interface for GPIO circuits running on the Raspberry Pi'
readme = 'README.md'
authors = [
    'Matthew Gerber <gerber.matthew@gmail.com>'
]
packages = [
    { include = 'raspberry_py', from = 'src'}
]
repository = 'https://github.com/MatthewGerber/raspberry-py'

[tool.poetry.dependencies]
python = '^3.11'
numpy = '^2.3'
smbus2 = "^0.6.1"
Flask = "^3.1.3"
Flask-Cors = "^6.0.5"
opencv-python = "^4.13.0.92"
rpi-ws281x = "^5.0.0"
pyserial = "^3.5"

# raspberry pi os removed sysfs gpio interface with rpi 5. prior to this, it was possible to use the RPi.GPIO package.
# the rpi-lgpio package is a drop-in replacement for RPi.GPIO that works with rpi 4 and 5. to install rpi-lgpio, first
# install the swig and liblgpio-dev packages with `sudo apt install swig liblgpio-dev`.
rpi-lgpio = "^0.6"

adafruit-circuitpython-pixelbuf = "^2.0.12"
adafruit-circuitpython-led-animation = "^2.12.6"
adafruit-circuitpython-neopixel = "^6.4.2"
adafruit-blinka-raspberry-pi5-neopixel = "^1.0.0rc2"

[tool.poetry.group.dev.dependencies]
mypy = '~=1.10'
flake8 = '~=7.0'

[tool.poetry.scripts]
write_component_files = 'raspberry_py.rest.application:write_component_files_cli'
